feat: 예외처리 eudd,edd,hrdd 확인완료